Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137519

Memory corruption for tst_qsettings with JSPI

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.10.0 Beta3, 6.11.0 FF
    • 6.10
    • Core: I/O
    • None
    • WebAssembly
    • 12493936f (dev), 5cd3d3342 (6.10)

      Trying to run tst_qsettings test with JSPI enabled results in various memory problems. After initial investigation the problem seems to be related to IndexDB calls.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            piwierci Piotr Wierciński
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes